# gmet_to_summa_snakemake

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
test_data/shp/: tuolumne_elev_band.gpkg
test_data/summa/settings/: attributes.nc  coldState.nc  fileManager.txt  forcingFileList.txt  outputControl.txt  trialParams.nc
workflow/: README.md  gmet_to_summa.smk
workflow/config/: gmet_to_summa_config.yaml  gmet_to_summa_test_case_config.yaml  metsim_base_config.yaml
workflow/notebooks/: gmet_to_summa_snakemake.ipynb  run_summa.ipynb  write_and_test_rules.ipynb
workflow/rules/: gmet_file_prep.smk  metsim_file_prep.smk  metsim_to_summa.smk  prepare_metsim_files.smk  remap_gmet_to_shp.smk  run_metsim.smk  run_pysumma_snakemake.smk
workflow/scripts/: gmet_to_summa_utils.py  metsim_utils.py  remap_forcing_to_shp.py
